# LLMDDI

./: .gitattributes  .gitignore  README.md
MSDAFL/: pyproject.toml
MSDAFL/dataset/: deep_drug_dict.json  miner_drug_dict.json  zhang_drug_dict.json  zhang_feat_dict.json  zhang_smiles.json
MSDAFL/msdafl/data_prep/: 1_create_dict.py  2_create_smiles.py  3_prepare_graph.py  4_create_datasets.py
MSDAFL/msdafl/model/: ddi_dataset.py  ddi_dataset_wo_type.py  ddi_get_mol_graphs.py  ddi_get_smiles.py  ddi_layers.py  ddi_main.py  ddi_predictor.py  ddi_train.py  ddi_train_msdafl.py
extractor/: README.md  pyproject.toml
extractor/extracted_data/ddi_datasets/: README.md
extractor/extractor/: pickle_extractor.py
extractor/extractor/categories/: categories_extractor.py
extractor/extractor/classification/: classification_extractor.py
extractor/extractor/ext_datasets/: explore_ddi.py  extract_ddi.py
extractor/extractor/interactions/: drug_drug_int_extractor.py  drug_food_int_extractor.py
extractor/extractor/pharmacology/: absorption_extractor.py  aff_org_extractor.py  clearance_extractor.py  (+8 more)
feature_eng/: README.md  pyproject.toml
feature_eng/feature_eng/: a.py  aggregate.py  atc_proc.py  attr_binaryzer.py  check_backward_leakage.py  check_data_leakage.py  check_new_positives.py  count_data.py  distribution_analysis.py  drug_food_int_classify.py  errors_for_groups.py  extract_false_positive.py  extract_negatives.py  first_data_exploration.py  get_missed_formulas.py  imbalanced_dataset.py  pkl_2_csv.py  token_distr_training_fs.py  update_negs_preds.py  z_test.py
(+729 files in other folders)
