[tool.poetry]
name = "msdafl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torch-geometric = "^2.6.1"
numpy = "^2.2.4"
scikit-learn = "^1.6.1"
rdkit = "^2024.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
