[tool.poetry]
name = "extractor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
tqdm = "^4.67.1"
rdkit = "^2024.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
